debug rowsToRemove board.slice for board.splice

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <body>
     <div id="app">
       <canvas></canvas>
+      <div>
+        <strong>Score : <span></span></strong>
+      </div>
     </div>
-    <strong>Score : <span></span></strong>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
